[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/Blocks/Blue Piece.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gameplay/BlockSpace/Block.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Block" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="yNeighbors" type="Label" parent="."]
margin_left = -12.7955
margin_top = -30.0
margin_right = 11.2045
margin_bottom = -16.0
text = "Y:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xNeighbors" type="Label" parent="."]
margin_left = 10.4156
margin_top = -7.68664
margin_right = 28.4156
margin_bottom = 6.31336
text = "X:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_Block_area_entered"]
